syntax = "proto3";

package lms_proto;

import "google/protobuf/empty.proto";

service HomeworkController {
  rpc Userrole(UserRequest) returns (UserReply) {}
  rpc Validation(CourseRequest) returns (CourseReply) {}
  rpc HomeworkID(FileRequest) returns (FileReply){}
}

message UserRequest {
  int32 user_id = 1;
}

message UserReply {
  string role = 1;
}

message CourseRequest {
  string user_id = 1;
  string course_id = 2;
}

message CourseReply {
  bool valid_course = 1;
}

message FileReply {
  string hw_url = 1;
}

message FileRequest {
  string hw_id = 1;
}
